# src/features/users/authentication/users.controller.js
@@ -10,7 +10,7 @@ export default class UserController {
     async signUp(req, res, next) {
         try {
             const user = await this.userRepository.signUp(req.body);
-            res.status(201).send(new ApiResponse(201, user, "Registration Successful"));
+            res.status(201).json(new ApiResponse(201, user, "Registration Successful"));
         } catch (err) {
             next(new ApplicationError(err.message, 400));
         }
@@ -27,9 +27,39 @@ export default class UserController {
                 });
                 return res.status(200).json(new ApiResponse(200, { token: result.token }, result.message));
             }
-            // res.status(400).send(new ApiResponse(400, "Invalid Credentials", result.message));
 
         } catch (err) {
+            next(err);
+        }
+    }
+
+
+    async forgotPassword(req, res, next){
+        const {email} = req.body;
+        try{
+            const result = await this.userRepository.forgotPassword(email, req);
+            if(!result){
+                throw new ApplicationError("Something went wrong", 500);
+            }
+            return res.status(200).json(new ApiResponse(200, {}, "Password reset link sent to your email"))
+
+        }catch(err){
+            next(err)
+        }
+
+    }
+
+    async resetPassword(req, res, next){
+        const {newPassword} = req.body;
+        const {token} = req.params;
+        try{
+
+            const result = await this.userRepository.resetPassword(newPassword, token);
+            if(!result){
+                throw new ApplicationError("Something went wrong", 500);
+            }
+            res.status(200).json(new ApiResponse(200, {}, "Password changed successfully"));
+        }catch(err){
             next(err);
         }
     }
@@ -39,9 +69,9 @@ export default class UserController {
             const result = await this.userRepository.logout(req.userId, req.cookies?.jwt);
             if(result.success){
                 res.clearCookie("jwt");
-                return res.status(200).send(new ApiResponse(200, "", result.message))
+                return res.status(200).json(new ApiResponse(200, "", result.message))
             }
-            return res.status(400).send(new ApiResponse(400, "", "Bad Request"));
+            return res.status(400).json(new ApiResponse(400, "", "Bad Request"));
         }catch(err){
             next(err);
         }
@@ -53,9 +83,9 @@ export default class UserController {
             const result = await this.userRepository.logoutAllDevices(req?.userId);
             if(result.success){
                 res.clearCookie('jwt');
-                return res.status(200).send(new ApiResponse(200, "", "Successfully logout from all devices"));
+                return res.status(200).json(new ApiResponse(200, "", "Successfully logout from all devices"));
             }
-            return res.status(400).send(new ApiResponse(400, "Bad Request", "Bad Request"));
+            return res.status(400).json(new ApiResponse(400, "Bad Request", "Bad Request"));
 
         } catch (err) {
             next(err);
